# mme_scalpx

./: .gitignore  README.md  pyproject.toml  secrets
ai_patch_runner/: apply_eligibility.py  generate_command_package.py  replay_next_batch_generator.py  review_bundler.py  runner_health_check.py  sandbox_ai_patcher.py  sandbox_patcher.py
ai_patch_runner/cli/: build_ai_replay_memory.py  mme_ai.py  replay_auto_loop.py
ai_patch_runner/context/: allowed_paths.json  blocked_paths.json  known_contracts.md  latest_ai_meta.json  latest_ai_proof.json  latest_chain_summary.md  project_constitution.md  replay_chain_signposts.json  replay_current_state.json  safety_boundary.json
ai_patch_runner/outputs/: 20260508_162939_ai_v01_smoke.sh  20260508_163235_ai_v011_smoke.sh  20260508_163509_ai_v012_smoke.sh  20260508_163708_ai_v013_smoke.sh  (+21 more)
app/mme_scalpx/: main.py  (+3 more)
docs/: BIN_CLASSIFICATION_AUDIT.md  BIN_MANUAL_SCRIPT_AUDIT.md  BIN_MIGRATION_EXCLUSIONS.md  BIN_MIGRATION_PLAN.md  BIN_PROOF_ONLY_MIGRATION_DRY_PLAN.md  BIN_R11_THIRD_PROOF_ONLY_MIGRATION_DRY_PLAN.md  BIN_R8E_FAILED_MIGRATION_INSPECTION.md  BIN_R9_SECOND_PROOF_ONLY_MIGRATION_DRY_PLAN.md  OPS_OWNERSHIP.md  REPO_HYGIENE_POLICY.md  research_data_capture_constitution.md  systemd_runtime_unit_registry.md
etc/: config_registry.yaml  execution.yaml  logging.yaml  params_mme.yaml  project.env  project.env.bak.20260414_134117  project.env.example  proof_registry.yaml  requirements.lock.txt  risk_limits.yaml  runtime.yaml  symbols.yaml
ops/: bootstrap_groups.py  ops_cmd.py  stop_session.py  validate_runtime_instruments.py
(+2304 files in other folders)
