[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mme-scalpx"
version = "0.1.0"
description = "MME ScalpX strategy platform"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
